--- a/src/server/website/detalles_factura.html
+++ b/src/server/website/detalles_factura.html
@@ -29,7 +29,7 @@
 </header>
 <body style="background-color: #b4c5cd;">
   <br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Factura</b><br><br></div>
+  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Factura<br><br></b></div>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tablePlans" style="border: 2px solid #017bab;">
       <tr>
@@ -43,7 +43,7 @@
     </table>
   </div>
   <br><br><br>
-  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Detalle</b><br><br></div>
+  <div class="container-fluid" style="display: flex; justify-content: center;"><b>Detalle<br><br></b></div>
   <div class="container-fluid" style="display: flex; justify-content: center;">
     <table id="tableBills" style="border: 2px solid #017bab;">
       <tr>
